# dashboards

./: .gitignore  README.md
.github/: CODEOWNERS
ademigration/: ade-to-host-encryption-workbook.json
appgwtroubleshooting/: appgw-troubleshooting-workbook-basic.json  appgw-troubleshooting-workbook.json  logsample.csv  query_data (7).csv  (+2 more)
tools/flowsaver/: New-FlowlogCommand.ps1  README.md  adx-clear.kql  adx-dashboard-queries.kql  adx-setup.kql  pyproject.toml  workbook-flowlogs.json
tools/flowsaver/samples/: VnetflowSample1.json
tools/flowsaver/src/flowloganalysis/: __init__.py  cli.py  loader.py  parser.py  storage.py
tools/flowsaver/src/flowloganalysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/flowsaver/tests/: test_parser.py
tools/netinspector/: .gitignore  README.md  pyproject.toml
tools/netinspector/src/netinspect/: __init__.py  auth.py  cli.py
tools/netinspector/src/netinspect/analysis/: analyze.py  checks_cost.py  checks_design.py  checks_dns.py  checks_lb.py  checks_reliability.py  checks_security.py  findings.py  reachability.py  routing.py  security.py
tools/netinspector/src/netinspect/discovery/: bgp.py  dns_zones.py  expressroute.py  load_balancers.py  local_gateways.py  nat_gateways.py  nsgs.py  public_ips.py  routes.py  vnets.py  vpn_gateways.py  vwan.py
tools/netinspector/src/netinspect/export/: dns.py  html.py  json_export.py  markdown.py  mermaid.py  reporting.py
tools/netinspector/src/netinspect/models/: topology.py  types.py
tools/netinspector/tests/: test_reporting.py
(+50 files in other folders)
